--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,10 +29,10 @@
         <!-- header inner -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="./login.html">Login</a>
-            <a href="#services">Services</a>
-            <a href="#">Create Form</a>
-            <a href="#contact">Contact</a>
+            <a href="./login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
+            <a href="#services"><i class="fas fa-briefcase"></i> Services</a>
+            <a href="#"><i class="fas fa-file-signature"></i> Create Form</a>
+            <a href="#contact"><i class="fas fa-fax"></i> Contact</a>
         </div>
         <!-- Use any element to open the sidenav -->
         <span onclick="openNav()" id="nav-bars"><i class="fas fa-bars" ></i></span>
@@ -42,14 +42,14 @@
                 <!-- end header -->
                 <!-- banner -->
                 <section>
-                    <div class="container-fluid">
+                    <!-- <div class="container-fluid">
                         <div class="row">
                             <div class="col-lg-10"></div>
                             <div class="col-lg-2">
                                 <a class="login grow2" href="./login.html"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="row">
                         <div class="col-md-12 col-lg-7">
                             <div class="text-bg">
@@ -73,7 +73,7 @@
 
         </div>
         <br>
-        <div class="down-arrow text-center">
+        <div class="down-arrow grow text-center">
             <a href="#services"> <i class="fas fa-angle-double-down"></i></a>
         </div>
     </header>
@@ -82,40 +82,57 @@
     <!-- services section -->
     <div class="services" id="services">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center ">
                 <div class=" col-md-12">
                     <div class="text-center titlepage">
                         <h2>Services</h2>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
-                    <div id="ho_color " class="services_main ">
-                        <i><img src="images/forms.png " class="grow2 " alt="# "/></i>
-
-                        <h3>Create Forms</h3>
-                        <p>ncididunt ut labore et dolore magna aliqua
-                        </p>
-                        <a class="read_more read_more2 grow " href="# ">More</a>
+                <div class=" col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center">
+                    <div class="card">
+                        <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                            <div class="card-body">
+                                <div id="ho_color " class="services_main ">
+                                    <i><img src="images/forms.png " class="grow2 " alt="# "/></i>
+                                    <h3>Create Forms</h3>
+                                    <p>ncididunt ut labore et dolore magna aliqua
+                                    </p>
+                                    <a class="read_more read_more2 grow " href="# ">More</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 ">
-                    <div id="ho_color " class="services_main " data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
-                        <i><img src="images/template.png " class="grow2 " alt="# "/></i>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center">
+                    <div class="card">
+                        <div class="col">
+                            <div class="card-body">
+                                <div id="ho_color " class="services_main " data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                                    <i><img src="images/template.png " class="grow2 " alt="# "/></i>
 
-                        <h3>Templates</h3>
-                        <p>ncididunt ut labore et dolore magna aliqua
-                        </p>
-                        <a class="read_more read_more2 grow " href="# ">More</a>
+                                    <h3>Templates</h3>
+                                    <p>ncididunt ut labore et dolore magna aliqua
+                                    </p>
+                                    <a class="read_more read_more2 grow " href="# ">More</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4 " data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
-                    <div id="ho_color " class="services_main ">
-                        <i><img src="images/services_icon4.png " class="grow2 " alt="# "/></i>
+                <div class="col-xs-12 col-sm-12 col-md-4 card3 d-flex justify-content-center">
+                    <div class="card">
+                        <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                            <div class="card-body">
+                                <div id="ho_color " class="services_main ">
+                                    <i><img src="images/services.png " class="grow2 " alt="# "/></i>
 
-                        <h3>Contact</h3>
-                        <p>ncididunt ut labore et dolore magna aliqua
-                        </p>
-                        <a class="read_more read_more2 grow " href="# ">More</a>
+                                    <h3>Contact</h3>
+                                    <p>ncididunt ut labore et dolore magna aliqua
+                                    </p>
+                                    <a class="read_more read_more2 grow " href="# ">More</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
