--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
                         <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
                             <div class="card-body">
                                 <div id="ho_color " class="services_main ">
-                                    <i><img src="images/forms.png " class="grow2 " alt="# "/></i>
+                                    <i><img src="images/forms_sercice.png " class="grow2 " alt="# "/></i>
                                     <h3>Create Forms</h3>
                                     <p>ncididunt ut labore et dolore magna aliqua
                                     </p>
@@ -108,7 +108,7 @@
                         <div class="col">
                             <div class="card-body">
                                 <div id="ho_color " class="services_main " data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
-                                    <i><img src="images/template.png " class="grow2 " alt="# "/></i>
+                                    <i><img src="images/template_service.png " class="grow2 " alt="# "/></i>
 
                                     <h3>Templates</h3>
                                     <p>ncididunt ut labore et dolore magna aliqua
@@ -124,7 +124,7 @@
                         <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
                             <div class="card-body">
                                 <div id="ho_color " class="services_main ">
-                                    <i><img src="images/services.png " class="grow2 " alt="# "/></i>
+                                    <i><img src="images/contact_service.png " class="grow2 " alt="# "/></i>
 
                                     <h3>Contact</h3>
                                     <p>ncididunt ut labore et dolore magna aliqua
