--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <!-- Local Css -->
     <link rel="stylesheet" href="./css/style.css">
 
@@ -36,6 +38,28 @@
         </div>
         <!-- Use any element to open the sidenav -->
         <span onclick="openNav()" id="nav-bars"><i class="fas fa-bars" ></i></span>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="./index.html"><img src="./images/logo.png" width="40px" height="40px" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./login.html">Login <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#services">Services </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Create Form</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div class="header">
             <div class="white_bg">
                 <!-- end header inner -->
@@ -53,11 +77,12 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-7">
                             <div class="text-bg">
-                                <span><img src="images/logo.png" class="grow head-1" height="50px" width="50px"> WEBARCH</span>
+                                <!-- <span><img src="images/logo.png" class="grow head-1" height="50px" width="50px"> WEBARCH</span> -->
+                                <span>WEBARCH</span>
                                 <h1 class="head2">F O R M S</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, corrupti id reiciendis, quisquam culpa veniam pariatur doloribus facere, amet quis vitae. Earum atque quasi odio explicabo similique animi tenetur eius.
                                 </p>
-                                <a class="grow read_more" href="#"><i class="fas fa-meteor"></i> Get Started</a>
+                                <a class="grow read_more" href="#services"><i class="fas fa-meteor"></i> Get Started</a>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-5">
@@ -73,9 +98,9 @@
 
         </div>
         <br>
-        <div class="down-arrow grow text-center">
+        <!-- <div class="down-arrow grow text-center">
             <a href="#services"> <i class="fas fa-angle-double-down"></i></a>
-        </div>
+        </div> -->
     </header>
     <!-- end banner -->
 
@@ -149,7 +174,7 @@
     <script src="./js/index.js "></script>
 </body>
 
-<footer id="contact ">
+<footer id="contact">
     <div class="container-fluid ">
         <div class="row ">
             <div class="col-md-4 p1 ">
@@ -183,9 +208,9 @@
                 <div class="text-center webarch-website grow2">
                     <a href="#" target="_blank"> Accessibility</a>
                 </div>
-                <div class="text-center webarch-website grow2">
+                <!-- <div class="text-center webarch-website grow2">
                     <a href="#" target="_blank"> Privacy Policy</a>
-                </div>
+                </div> -->
                 <div class="text-center webarch-website grow2">
                     <a href="#" target="_blank"> Terms & Condition</a>
                 </div>
