--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,11 +9,18 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+    </script>
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <!-- Local Css -->
     <link rel="stylesheet" href="./css/style.css">
 
@@ -31,76 +38,71 @@
         <!-- header inner -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="./login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
-            <a href="#services"><i class="fas fa-briefcase"></i> Services</a>
-            <a href="#"><i class="fas fa-file-signature"></i> Create Form</a>
-            <a href="#contact"><i class="fas fa-fax"></i> Contact</a>
+            <a href="#about"><i class="fas fa-users"></i> About Us</a>
+            <a href="#services"><i class="fas fa-briefcase"></i> Our Products</a>
+            <a href="#contact"><i class="fas fa-fax"></i> Contact Us</a>
+            <a href="./index.html"><img src="./images/logo.png" width="80px" height="80px" /></a>
         </div>
         <!-- Use any element to open the sidenav -->
         <span onclick="openNav()" id="nav-bars"><i class="fas fa-bars" ></i></span>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="./index.html"><img src="./images/logo.png" width="40px" height="40px" /></a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand grow" href="./index.html"><img src="./images/logo.png" width="40px" height="40px" /></a>
+            <a class="nav-link btn nav-button-mobile" href="./login.html">Try Now</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+            <div class="collapse ml-auto navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="./login.html">Login <span class="sr-only">(current)</span></a>
+                        <a class="nav-link middle" href="#about">About Us <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services </a>
+                        <a class="nav-link middle" href="#services">Our Products </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Create Form</a>
+                        <a class="nav-link btn nav-button1" href="#">Try Now</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
+
                 </ul>
             </div>
         </nav>
         <div class="header">
             <div class="white_bg">
-                <!-- end header inner -->
-                <!-- end header -->
-                <!-- banner -->
                 <section>
-                    <!-- <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-lg-10"></div>
-                            <div class="col-lg-2">
-                                <a class="login grow2" href="./login.html"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
+
+                    <div class="row">
+                        <div class="col-md-12 col-lg-5 banner_img_mobile">
+                            <div class="text_img grow2 text-center">
+                                <figure><img class="banner_mobile" src="images/ban_img.png" alt="banner image" /></figure>
                             </div>
                         </div>
-                    </div> -->
-                    <div class="row">
                         <div class="col-md-12 col-lg-7">
                             <div class="text-bg">
-                                <!-- <span><img src="images/logo.png" class="grow head-1" height="50px" width="50px"> WEBARCH</span> -->
-                                <span>WEBARCH</span>
-                                <h1 class="head2">F O R M S</h1>
+                                <h1 class="head1">Forms</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, corrupti id reiciendis, quisquam culpa veniam pariatur doloribus facere, amet quis vitae. Earum atque quasi odio explicabo similique animi tenetur eius.
                                 </p>
-                                <a class="grow read_more" href="#services"><i class="fas fa-meteor"></i> Get Started</a>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-5">
-                            <div class="text_img grow2">
-                                <figure><img src="images/ban_img.png" alt="#" /></figure>
+                        <div class="col-md-12 col-lg-5 banner_img_desktop">
+                            <div class="text_img grow2 text-center">
+                                <figure><img class="banner_desktop" src="images/ban_img.png" alt="banner image" /></figure>
+
                             </div>
                         </div>
                     </div>
-
+                    <br>
+                    <div class="row">
+                        <div class="text-center col-12">
+                            <a href="#services" class="scrolldown grow">Scroll Down</a>
+                        </div>
+                    </div>
 
                 </section>
             </div>
 
         </div>
         <br>
-        <!-- <div class="down-arrow grow text-center">
-            <a href="#services"> <i class="fas fa-angle-double-down"></i></a>
-        </div> -->
+
     </header>
     <!-- end banner -->
 
@@ -108,61 +110,92 @@
     <div class="services" id="services">
         <div class="container">
             <div class="row text-center ">
-                <div class=" col-md-12">
+                <div class=" col-12">
                     <div class="text-center titlepage">
-                        <h2>Services</h2>
+                        <h2>What we offer</h2>
                     </div>
                 </div>
-                <div class=" col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center">
-                    <div class="card">
-                        <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
-                            <div class="card-body">
-                                <div id="ho_color " class="services_main ">
-                                    <i><img src="images/forms_sercice.png " class="grow2 " alt="# "/></i>
-                                    <h3>Create Forms</h3>
-                                    <p>ncididunt ut labore et dolore magna aliqua
-                                    </p>
-                                    <a class="read_more read_more2 grow " href="# ">More</a>
+
+                <div class=" col-xs-12 col-sm-6 col-md-6 d-flex justify-content-center">
+                    <div class="row">
+                        <div class="col-12 col-md-12 d-flex justify-content-center">
+                            <div class="card">
+                                <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                                    <div class="card-body">
+                                        <div id="ho_color " class="services_main ">
+                                            <i><img src="images/forms_sercice.png " class="grow2 " alt="# "/></i>
+
+                                            <p>ncididunt ut labore et dolore magna aliqua
+                                            </p>
+
+                                        </div>
+
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center">
-                    <div class="card">
-                        <div class="col">
-                            <div class="card-body">
-                                <div id="ho_color " class="services_main " data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
-                                    <i><img src="images/template_service.png " class="grow2 " alt="# "/></i>
-
-                                    <h3>Templates</h3>
-                                    <p>ncididunt ut labore et dolore magna aliqua
-                                    </p>
-                                    <a class="read_more read_more2 grow " href="# ">More</a>
-                                </div>
-                            </div>
+                        <div class="col-12 col-md-12">
+                            <div class="service-card-heading"><a href="#" class="text-center middle service-card-heading grow">Create Form </a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-4 card3 d-flex justify-content-center">
-                    <div class="card">
-                        <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
-                            <div class="card-body">
-                                <div id="ho_color " class="services_main ">
-                                    <i><img src="images/contact_service.png " class="grow2 " alt="# "/></i>
+                <div class="col-xs-12 col-sm-6 col-md-6 d-flex justify-content-center">
+                    <div class="row ">
+                        <div class="col-12 col-md-12 d-flex justify-content-center">
+                            <div class="card">
+                                <div class="col" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                                    <div class="card-body">
+                                        <div id="ho_color " class="services_main ">
+                                            <i><img src="images/template_service.png " class="grow2 " alt="# "/></i>
 
-                                    <h3>Contact</h3>
-                                    <p>ncididunt ut labore et dolore magna aliqua
-                                    </p>
-                                    <a class="read_more read_more2 grow " href="# ">More</a>
+                                            <p>ncididunt ut labore et dolore magna aliqua
+                                            </p>
+
+                                        </div>
+
+                                    </div>
+
                                 </div>
                             </div>
+                        </div>
+                        <div class="col-12 col-md-12">
+                            <div class="service-card-heading"><a href="#" class="text-center grow middle service-card-heading">Templates </a></div>
                         </div>
                     </div>
                 </div>
             </div>
+            <br/><br/>
+            <div class="row">
+                <div class="col-12 col-md-12 text-center">
+                    <a href="#" class="btn btn-warning btn-large grow">Try For Free</a>
+                </div>
+            </div>
         </div>
         <br>
+    </div>
+
+    <!-- about section  -->
+    <div class="row" id="about">
+        <div class="row">
+            <div class="col-12 col-md-12">
+                <h1 class="text-center about-heading">Who are we?</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-4 about-img-mobile text-center">
+                <img src="./images/logo.png" class="text-center rotate about-img" />
+            </div>
+            <div class="col-12 col-md-8 align-baseline">
+                <p class=" about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dis vestibulum velit vitae metus. Accumsan imperdiet at sed amet. Ultrices risus morbi nibh sed eu odio pharetra vestibulum. Cursus turpis at gravida tristique quis volutpat lectus
+                    fermentum purus. Cursus faucibus convallis dolor integer velit. Dolor, mauris turpis purus libero feugiat lacus.</p>
+                <p class="about-para2"><a href="#" class=" about-para-link">Know More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a></p>
+            </div>
+            <div class="col-12 col-md-4 about-img-desktop text-center">
+                <img src="./images/logo.png" class="text-center rotate about-img" />
+            </div>
+        </div>
+
     </div>
 
     <!-- end services section -->
@@ -183,11 +216,11 @@
                 </div>
                 <br>
                 <h5 class="webarch grow ">Webarch - Architect Of The Web</h5>
-                <h5 class="webarch grow ">SRMIST,KTR CHENNAI-603203</h5>
+                <h5 class="webarch grow ">SRMIST KTR</h5>
 
             </div>
             <div class="col-md-4 p1 ">
-                <h4 style="text-align: center;color:white; ">GET CONNECTED</h4>
+                <h5 style="text-align: center;color:white; ">CONNECT WITH US</h5>
                 <hr class="light ">
                 <ul class="social_icon d-flex justify-content-center ">
                     <li> <a href="https://in.linkedin.com/company/webarchclub " target="blank "><i class="fab fa-linkedin grow "></i></a></li>
@@ -203,14 +236,14 @@
             </div>
 
             <div class="col-md-4 p1 ">
-                <h4 style="text-align: center;color:white;">INFORMATION</h4>
+                <h5 style="text-align: center;color:white;">OUICK LINKS</h5>
                 <hr class="light">
                 <div class="text-center webarch-website grow2">
-                    <a href="#" target="_blank"> Accessibility</a>
+                    <a href="#" target="_blank"> About Us</a>
                 </div>
-                <!-- <div class="text-center webarch-website grow2">
-                    <a href="#" target="_blank"> Privacy Policy</a>
-                </div> -->
+                <div class="text-center webarch-website grow2">
+                    <a href="#" target="_blank"> Our Products</a>
+                </div>
                 <div class="text-center webarch-website grow2">
                     <a href="#" target="_blank"> Terms & Condition</a>
                 </div>
@@ -219,7 +252,7 @@
             </div>
             <div class="col-12 p1 ">
                 <hr class="light-100 ">
-                <h5 style="text-align: center;color:white; "> ©Webarch 2021</h5>
+                <h6 style="text-align: center;color:white; "> ©Webarch 2021</h6>
             </div>
         </div>
     </div>
