added login signup and forget password page

--- a/frontend/forgot-password.html
+++ b/frontend/forgot-password.html
@@ -16,7 +16,7 @@
     <!-- Local Css -->
     <link rel="stylesheet" href="./css/login-signup-forgotpassword.css" />
 
-    <title>Login</title>
+    <title>Forgot Password</title>
 </head>
 
 <body>
@@ -49,6 +49,9 @@
         </div>
         <div class="fluid-container login">
             <div class="form-container">
+                <div class="recoverPassword mb-4">
+                    <h1>Recover Password</h1>
+                </div>
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label fw-bold">Enter email</label>
@@ -57,18 +60,9 @@
                             We'll never share your email with anyone else.
                         </div>
                     </div>
-                    <div class="mb-5 password">
-                        <label for="exampleInputPassword1" class="form-label fw-bold">Password</label>
-                        <input type="password" class="form-control mb-2" id="exampleInputPassword1" />
-                        <a href="./forgot-password.html">Forgot Password?</a>
-                    </div>
                     <div class="mybtn">
                         <button type="submit" class="btn btn-success btn-login">
-                            Login
-                        </button>
-                        <h5 class="my-2">Or</h5>
-                        <button type="submit" class="btn btn-danger btn-google">
-                            <i class="fab fa-google"></i> Sign in with google
+                            Reset
                         </button>
                     </div>
                     <div class="signUp mt-5">
