--- a/frontend/sign-up.html
+++ b/frontend/sign-up.html
@@ -16,7 +16,7 @@
     <!-- Local Css -->
     <link rel="stylesheet" href="./css/login-signup-forgotpassword.css" />
 
-    <title>Login</title>
+    <title>Sign-Up</title>
 </head>
 
 <body>
@@ -57,14 +57,17 @@
                             We'll never share your email with anyone else.
                         </div>
                     </div>
-                    <div class="mb-5 password">
+                    <div class="mb-3 password">
                         <label for="exampleInputPassword1" class="form-label fw-bold">Password</label>
-                        <input type="password" class="form-control mb-2" id="exampleInputPassword1" />
-                        <a href="./forgot-password.html">Forgot Password?</a>
+                        <input type="password" class="form-control" id="exampleInputPassword1" />
+                    </div>
+                    <div class="mb-5 password">
+                        <label for="exampleInputPassword1" class="form-label fw-bold">Confirm Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" />
                     </div>
                     <div class="mybtn">
                         <button type="submit" class="btn btn-success btn-login">
-                            Login
+                            Sign up
                         </button>
                         <h5 class="my-2">Or</h5>
                         <button type="submit" class="btn btn-danger btn-google">
@@ -72,7 +75,7 @@
                         </button>
                     </div>
                     <div class="signUp mt-5">
-                        <a href="./sign-up.html">Don't have an account? Sign Up</a>
+                        <a href="./login.html">Already have an account? Login</a>
                     </div>
                 </form>
             </div>
