--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="logo" href="favicon.png">
+    <link rel="shortcut icon" type="logo" href="./favicon.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -38,6 +38,7 @@
         <!-- header inner -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="./login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
             <a href="#about"><i class="fas fa-users"></i> About Us</a>
             <a href="#services"><i class="fas fa-briefcase"></i> Our Products</a>
             <a href="#contact"><i class="fas fa-fax"></i> Contact Us</a>
@@ -60,7 +61,7 @@
                         <a class="nav-link middle" href="#services">Our Products </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn nav-button1" href="#">Try Now</a>
+                        <a class="nav-link btn nav-button1" href="./login.html">Try Now</a>
                     </li>
 
                 </ul>
@@ -204,7 +205,7 @@
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8 " crossorigin="anonymous "></script>
     <!-- Local Js -->
-    <script src="./js/index.js "></script>
+    <script src="./js/sidenav-n-preloader.js "></script>
 </body>
 
 <footer id="contact">
