--- a/frontend/index.html
+++ b/frontend/index.html
@@ -237,7 +237,7 @@
             </div>
 
             <div class="col-md-4 p1 ">
-                <h6 style="text-align: center;color:white;">OUICK LINKS</h6>
+                <h6 style="text-align: center;color:white;">QUICK LINKS</h6>
                 <hr class="light">
                 <div class="text-center webarch-website grow2">
                     <a href="#" target="_blank"> About Us</a>
