--- a/frontend/sign-up.html
+++ b/frontend/sign-up.html
@@ -20,22 +20,13 @@
 </head>
 
 <body>
-    <!-- sidenav start -->
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="./login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
-        <a href="./index.html#about"><i class="fas fa-users"></i> About Us</a>
-        <a href="./index.html#services"><i class="fas fa-briefcase"></i> Our Products</a>
-        <a href="./index.html#contact"><i class="fas fa-fax"></i> Contact Us</a>
-        <a href="./index.html"><img src="./images/logo.png" width="80px" height="80px" /></a>
+    <a href="./index.html" class="btn home-btn-desktop ">
+        <i class="fas fa-angle-double-left"></i> Home</a>
+    <div class="navbar">
+        <a href="./index.html" class="btn home-btn ">
+            <i class="fas fa-angle-double-left"></i> Home</a>
+        <img src="./images/logo.png" class="nav-logo" height="50px" width="50px" />
     </div>
-    <!-- Use any element to open the sidenav -->
-    <span onclick="openNav()" id="nav-bars"><i class="fas fa-bars" ></i></span>
-    <nav class="navbar ml-auto">
-        <img class="nav-logo" src="images/logo.png" width="50px" height="50px" />
-    </nav>
-
-    <!-- sidenav end  -->
     <section>
         <div class="fluid-container logo">
             <div class="logo-box">
