added dash board

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-12">
-                            <div class="service-card-heading"><a href="#" class="text-center grow middle service-card-heading">Templates </a></div>
+                            <div class="service-card-heading"><a href="./dashboard.html" class="text-center grow middle service-card-heading">Templates </a></div>
                         </div>
                     </div>
                 </div>
