--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -43,7 +43,7 @@
                                 <div class="col-xs-12 col-sm-12 col-md-12 ">
                                     <h6>Enter name of new form</h6>
                                     <label for="name"></label>
-                                    <input type="text" id="name" name="name" placeholder="Enter name">
+                                    <input type="text" id="name" name="name" class="form-name-input" placeholder="Enter name">
                                 </div>
                                 <br><br>
                                 <div class="text-center">
@@ -79,7 +79,7 @@
 
                     <div class="toggle-btns">
                         <p class="alignleft"><b>Recently Used</b></p>
-                        <p class="alignright"><i class="fas fa-th-large grid-layout active grow"></i> A-Z</p>
+                        <p class="alignright"><i class="fas fa-th-large grid-layout tog-btn active grow"></i></p>
                     </div>
                     <ul class="list-group list-group-flush py-5">
                         </li>
@@ -123,7 +123,7 @@
                     <div class="row">
                         <div class="toggle-btns">
                             <p class="alignleft"><b>Recently Used</b></p>
-                            <p class="alignright"><i class="fas fa-list list-layout active grow"></i> A-Z</p>
+                            <p class="alignright"><i class="fas fa-list tog-btn list-layout active grow"></i></p>
                         </div>
                         <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
